--- a/google_calendars.yaml
+++ b/google_calendars.yaml
@@ -124,3 +124,10 @@
     ignore_availability: true
     name: Customers Projects Timeline
     track: true
+
+- cal_id: p07n98go11onamd08d0kmq6jhs@group.calendar.google.com
+  entities:
+  - device_id: home_assistant_devs
+    ignore_availability: true
+    name: Home Assistant Devs
+    track: true
